// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Survey Title Component should not show map companies list when survey has UDFs 1`] = `
<pf-map-company-modal
  companiesList={[Function Array]}
  getMapModalDataFailed$={[Function Store]}
  hasCompanySurveyUDFs={[Function Boolean]}
  isLoadingMapModalData$={[Function Store]}
  mapCompaniesModalOpen$={[Function Store]}
  mappedCompanies={[Function Object]}
  modalData$={[Function Store]}
  store={[Function Store]}
  surveyApi="undefined"
  unsubscribe$={[Function Subject]}
>
  <pf-modal-form
    size="lg"
    title="Map Companies"
  >
    
    <div>
      <pf-input-debounce />
    </div>
    <pf-async-container>
      <div
        class="row pt-3 "
      >
        
        <div
          class="col-5 pb-2 pr-5 text-danger"
        >
           Mapping functionality is not available for this survey as it contains company specific custom fields. 
        </div>
        
        <div
          class="col-7 pb-2"
        >
          <h5>
            Companies Mapped: 
            
          </h5>
          
        </div>
      </div>
    </pf-async-container>
  </pf-modal-form>
</pf-map-company-modal>
`;

exports[`Custom Survey Title Component should show map companies list when survey does not have UDFs 1`] = `
<pf-map-company-modal
  companiesList={[Function Array]}
  getMapModalDataFailed$={[Function Store]}
  hasCompanySurveyUDFs="false"
  isLoadingMapModalData$={[Function Store]}
  mapCompaniesModalOpen$={[Function Store]}
  mappedCompanies={[Function Object]}
  modalData$={[Function Store]}
  store={[Function Store]}
  surveyApi="undefined"
  unsubscribe$={[Function Subject]}
>
  <pf-modal-form
    size="lg"
    title="Map Companies"
  >
    
    <div>
      <pf-input-debounce />
    </div>
    <pf-async-container>
      <div
        class="row pt-3 "
      >
        
        <div
          class="col-5
             pb-2 pr-5"
        >
          <h5>
            Companies not Mapped:
          </h5>
          
          
          
          <div>
            No companies found
          </div>
          <div
            class="pt-2"
          >
            
          </div>
        </div>
        
        <div
          class="col-7 pb-2"
        >
          <h5>
            Companies Mapped: 
            
          </h5>
          
        </div>
      </div>
    </pf-async-container>
  </pf-modal-form>
</pf-map-company-modal>
`;
